--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h1 {
     font-size: 34px;
 }
 
-p{
+p {
     display: block;
     font-size: 2em;
     -webkit-margin-before: 0.67em;
@@ -203,6 +203,9 @@ p{
 
 #canvas {
     float: left;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
     width: 100%;
     height: 90%;
     /* border: 1px solid #cccccc; */
@@ -211,7 +214,6 @@ p{
 #legend-area {
     float: left;
     width: 100%;
-    height: 100%;
     /* border: 1px solid #cccccc; */
 }
 
@@ -222,8 +224,11 @@ p{
 
 #explanation-area {
     position: absolute;
-    width: 50%;
-    padding: 1em;
+    width: 65%;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 1em;
+    padding-bottom: 0.5em;
     text-align: center;
     /* border: 1px solid #cccccc; */
 }
@@ -309,17 +314,29 @@ div.text{
 
 .legend-title {
     float: left;
-    float: left;
     width: 100%;
     font-size: 13px;
 }
 
 .legend-desc {
     float: left;
-    float: left;
     width: 100%;
     padding-left: 1em;
     font-size: 11px;
+}
+
+.misc {
+    float: left;
+    width: 100%;
+    margin-top: 1em;
+}
+
+.misc-desc {
+    width: 100%;
+    font-size: 11px;
+    cursor: pointer;
+    cursor: hand;
+    text-decoration: underline;
 }
 
 .category {
@@ -345,10 +362,52 @@ div.text{
     font-size: 10px;
 }
 
-/*img.story-image {
+p.explanation {
+    padding: 0em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+}
+
+.btn {
+  border-radius: 5px;
+  padding: 3px 10px;
+  font-size: 10px;
+  text-decoration: none;
+  color: #fff;
+  background-color: #888888;
+  box-shadow: 0px 1px 0px 0px #666666;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  cursor: hand;
+}
+
+.btn:hover {
+  background-color: #AAAAAA;
+}
+
+.btn.go-back {
+    float: left;
+}
+
+.btn.go-next {
+    float: right;
+}
+
+.story-image {
+    /* float: left;
     display: flex;
-    margin: 0 auto;
-}*/
+    margin: auto;
+    justify-content: center;
+    text-align: center;
+    align-items: center; */
+    margin: auto;
+    height: 100%;
+}
 
 /* for dat.gui */
 .dg {
