--- a/css/title.css
+++ b/css/title.css
@@ -153,7 +153,7 @@ p {
     /*align: right;*/
     font-family: 'Open Sans';
     font-size: 17px;
-    /* font-weight: 300; */
+    font-weight: 300;
     text-align: left;
 
     -webkit-animation-duration: 1s;
