--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,13 @@ div.text{
     width: 100%;
     margin-top: 1em;
 }
-
+.credits{
+    font-size:11px;
+    margin-left: 15px;
+    position: fixed;
+    bottom: 25px;
+    left: 0;
+}
 .skip-button{
     cursor: pointer;
     cursor: hand;
